ie7 fixes wrapped up

--- a/web/css/ie7.css
+++ b/web/css/ie7.css
@@ -51,3 +51,12 @@ h2 {
     position: relative;
     top: 10px;
 }
+
+.rsslides_here a {
+    background: pink;
+    background: rgba(255, 255, 255, .4);
+}
+
+.rslides_tab a {
+    background: red;
+}
